tests/format/misc/errors/front-matter/__snapshots__/format.test.js.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: Should not support front matter [__babel_estree] format 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter [__js_expression] format 1`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter [__ng_action] format 1`] = `"Unexpected token 'Matter'"`;

exports[`snippet: Should not support front matter [__ng_binding] format 1`] = `"Unexpected token 'Matter'"`;

exports[`snippet: Should not support front matter [__ng_directive] format 1`] = `
"Unexpected end of expression: ---
Front Matter content
--- at the end of the expression [---
Front Matter content
---] in test.html@0:0"
`;

exports[`snippet: Should not support front matter [__ng_interpolation] format 1`] = `"Unexpected token 'Matter'"`;

exports[`snippet: Should not support front matter [__ts_expression] format 1`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter [__vue_event_binding] format 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter [__vue_expression] format 1`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter [__vue_ts_event_binding] format 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter [__vue_ts_expression] format 1`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter [acorn] format 1`] = `
"Assigning to rvalue (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Assigning to rvalue (1:2)"
`;

exports[`snippet: Should not support front matter [babel] format 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter [babel-flow] format 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter [babel-ts] format 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter [espree] format 1`] = `
"Assigning to rvalue (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Assigning to rvalue"
`;

exports[`snippet: Should not support front matter [flow] format 1`] = `
"Invalid left-hand side in assignment (1:3)
> 1 | ---
    |   ^
> 2 | Front Matter content
    | ^^^^^^
  3 | ---"
`;

exports[`snippet: Should not support front matter [graphql] format 1`] = `
"Syntax Error: Invalid number, expected digit but got: "-". (1:2)
> 1 | ---
    |  ^
  2 | Front Matter content
  3 | ---
Cause: Syntax Error: Invalid number, expected digit but got: "-"."
`;

exports[`snippet: Should not support front matter [json] format 1`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter [json-stringify] format 1`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter [json5] format 1`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter [jsonc] format 1`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter [meriyah] format 1`] = `
"Invalid increment/decrement operand (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^^^^^^
  3 | ---
Cause: [2:6-2:12]: Invalid increment/decrement operand"
`;

exports[`snippet: Should not support front matter [typescript] format 1`] = `
"Expression expected. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Expression expected."
`;
